--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
     color: #fff;
     padding: 1rem 0;
     text-align: center;
+    <img src="/unipd_logo.png" alt="Site Logo">
 }
 
 header h1 {
